🐛 Fixed note field keyboard save in admin members form (#15476)
closes: https://github.com/TryGhost/Ghost/issues/15450

- the object property "note" was updated only on focus out, which is wrong
- the property should be updated on input
	-this problem occurred only for TextArea component

--- a/ghost/admin/app/components/gh-member-settings-form.hbs
+++ b/ghost/admin/app/components/gh-member-settings-form.hbs
@@ -57,7 +57,7 @@
                             @class="gh-member-details-textarea"
                             @tabindex="3"
                             @value={{this.scratchMember.note}}
-                            @focus-out={{fn this.setProperty "note" this.scratchMember.note}}
+                            {{on "input" this.updateProperty}}
                             data-test-input="member-note"
                         />
                         <GhErrorMessage @errors={{this.member.errors}} @property="note" />
