Added post sentiment (#15592)
fixes https://github.com/TryGhost/Team/issues/2054

This change adds the sentiment and positive_feedback counts to the posts models. This change isn't really ideal because there are some problems here:
- sentiment isn't really a count
- we don't need to include the sentiment and positive_feedback as a default for posts (but the same is true for attribution)

It would make sense to move this to separate endpoints that only fetch the analytics for a given post when the analytics page is opened. But for our initial skateboard version of audience feedback this should be a good start to already see the data.

--- a/ghost/admin/app/components/posts/analytics.hbs
+++ b/ghost/admin/app/components/posts/analytics.hbs
@@ -90,6 +90,13 @@
                 </div>
             {{/if}}
         {{/if}}
+
+        {{#if this.post.showAudienceFeedback }}
+            <div class="gh-post-analytics-item">
+                <h3>{{format-number this.post.count.positive_feedback}}</h3>
+                <p>More like this &mdash; <strong>{{this.post.count.sentiment}}%</strong></p>
+            </div>
+        {{/if}}
     </div>
 
     {{#if this.isLoaded }}
