--- a/ghost/admin/app/components/modals/newsletters/edit/preview.hbs
+++ b/ghost/admin/app/components/modals/newsletters/edit/preview.hbs
@@ -40,6 +40,25 @@
                 <p>Over there on the left you’ll see some settings that allow you to customize the look and feel of this template to make it perfectly suited to your brand. Email templates are exceptionally finnicky to make, but we’ve spent a long time optimising this one to make it work beautifully across devices, email clients and content types.</p>
                 <p>So, you can trust that every email you send with Ghost will look great and work well. Just like the rest of your site.</p>
             </div>
+
+            {{#if (and @newsletter.feedbackEnabled (feature "audienceFeedback"))}}
+                <div class="gh-members-emailpreview-feedback gh-members-emailpreview-content">
+                    <h4 class="gh-members-emailpreview-feedback-title">What did you think of this post?</h4>
+
+                    <div class="gh-members-emailpreview-feedback-buttons-group">
+                        <Modals::Newsletters::Components::FeedbackButton
+                            @text="More like this"
+                            @color={{this.accentColor}}
+                            @icon="thumbs-up" />
+
+                        <Modals::Newsletters::Components::FeedbackButton
+                            @text="Less like this"
+                            @color={{this.accentColor}}
+                            @icon="thumbs-down" />
+                    </div>
+                </div>
+            {{/if}}
+
             <div class="gh-members-emailpreview-footer">
                 <div class="gh-members-emailpreview-footercontent">
                     {{html-safe @newsletter.footerContent}}
