--- a/ghost/admin/app/components/posts/analytics.hbs
+++ b/ghost/admin/app/components/posts/analytics.hbs
@@ -94,7 +94,7 @@
         {{#if this.post.showAudienceFeedback }}
             <div class="gh-post-analytics-item">
                 <h3>{{format-number this.post.count.positive_feedback}}</h3>
-                <p>More like this &mdash; <strong>{{this.post.count.sentiment}}%</strong></p>
+                <p><span class="hide-when-small">More </span>like<span class="hide-when-small"> this</span> &mdash; <strong>{{this.post.count.sentiment}}%</strong></p>
             </div>
         {{/if}}
     </div>
