Fix newsletter links (#15621)
Added a button for editing links in newsletters after sending to the
Post analytics page

Co-authored-by: Rishabh <zrishabhgarg@gmail.com>

--- a/ghost/admin/app/components/posts/analytics.hbs
+++ b/ghost/admin/app/components/posts/analytics.hbs
@@ -104,7 +104,7 @@
             {{#if (is-empty this.links) }}
                 {{!-- Empty state --}}
             {{else}}
-                <Posts::LinksTable @links={{this.links}} />
+                <Posts::LinksTable @links={{this.links}} @updateLink={{this.updateLink}} />
             {{/if}}
         {{/if}}
 
