Added conversions count and separate analytics page (#15637)
fixes https://github.com/TryGhost/Team/issues/2084

- When audience feedback is enabled, we use a single 'conversions' count instead of having separate ones for signups and paid conversions.
- The analytics component is separated so we can change it without breaking the existing page.

--- a/ghost/admin/app/components/posts/old-analytics.hbs
+++ b/ghost/admin/app/components/posts/old-analytics.hbs
@@ -76,17 +76,19 @@
         {{#if this.post.showAttributionAnalytics }}
             <div class="gh-post-analytics-item">
                 <LinkTo @route="members" @query={{hash filterParam=(concat "signup:[" this.post.id "]") }}>
-                    <h3>{{format-number this.post.count.conversions}}</h3>
-                    <p>{{gh-pluralize this.post.count.conversions "conversions" without-count=true}}</p>
+                    <h3>{{format-number this.post.count.signups}}</h3>
+                    <p>{{gh-pluralize this.post.count.signups "signup" without-count=true}}</p>
                 </LinkTo>
             </div>
-        {{/if}}
 
-        {{#if this.post.showAudienceFeedback }}
-            <div class="gh-post-analytics-item">
-                <h3>{{format-number this.post.count.positive_feedback}}</h3>
-                <p><span class="hide-when-small">More </span>like<span class="hide-when-small"> this</span> &mdash; <strong>{{this.post.count.sentiment}}%</strong></p>
-            </div>
+            {{#if this.post.showPaidAttributionAnalytics }}
+                <div class="gh-post-analytics-item">
+                    <LinkTo @route="members" @query={{hash filterParam=(concat "conversion:[" this.post.id "]") }}>
+                        <h3>{{format-number this.post.count.paid_conversions}}</h3>
+                        <p><span class="hide-when-small">Paid </span>{{gh-pluralize this.post.count.paid_conversions "conversion" without-count=true}}</p>
+                    </LinkTo>
+                </div>
+            {{/if}}
         {{/if}}
     </div>
 
